creating a submenu with links to notebooks plus games

--- a/_notebooks/2024-09-13-interests.ipynb
+++ b/_notebooks/2024-09-13-interests.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "b6e031a3",
    "metadata": {
     "vscode": {
@@ -31,7 +31,6 @@
      "data": {
       "text/html": [
        "\n",
-       "<!DOCTYPE html>\n",
        "<html lang=\"en\">\n",
        "<head>\n",
        "    <meta charset=\"UTF-8\">\n",
@@ -88,9 +87,10 @@
        "    </style>\n",
        "</head>\n",
        "<body>\n",
+       "    <p>Click the buttons to learn about things that I like: </p>\n",
        "    <div class=\"button-container\">\n",
        "        <button class=\"btn btn-1\" onclick=\"window.location.href='http://127.0.0.1:4100/gabi_2025/tennis/'\">Tennis</button>\n",
-       "        <button class=\"btn btn-2\" onclick=\"window.location.href='http://127.0.0.1:4100/gabi_2025/spaniels/'\">Spaniels</button>\n",
+       "        <button class=\"btn btn-2\" onclick=\"window.location.href='http://127.0.0.1:4100/gabi_2025/spaniels/'\">Dogs</button>\n",
        "        <button class=\"btn btn-3\" onclick=\"window.location.href='http://127.0.0.1:4100/gabi_2025/brazil/'\">Brazil</button>\n",
        "    </div>\n",
        "</body>\n",
@@ -108,7 +108,6 @@
     "from IPython.core.display import HTML\n",
     "\n",
     "html_code = '''\n",
-    "<!DOCTYPE html>\n",
     "<html lang=\"en\">\n",
     "<head>\n",
     "    <meta charset=\"UTF-8\">\n",
@@ -165,22 +164,22 @@
     "    </style>\n",
     "</head>\n",
     "<body>\n",
+    "    <p>Click the buttons to learn about things that I like: </p>\n",
     "    <div class=\"button-container\">\n",
     "        <button class=\"btn btn-1\" onclick=\"window.location.href='http://127.0.0.1:4100/gabi_2025/tennis/'\">Tennis</button>\n",
-    "        <button class=\"btn btn-2\" onclick=\"window.location.href='http://127.0.0.1:4100/gabi_2025/spaniels/'\">Spaniels</button>\n",
+    "        <button class=\"btn btn-2\" onclick=\"window.location.href='http://127.0.0.1:4100/gabi_2025/spaniels/'\">Dogs</button>\n",
     "        <button class=\"btn btn-3\" onclick=\"window.location.href='http://127.0.0.1:4100/gabi_2025/brazil/'\">Brazil</button>\n",
     "    </div>\n",
     "</body>\n",
     "</html>\n",
     "'''\n",
     "\n",
-    "# Display the HTML in Jupyter\n",
     "display(HTML(html_code))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "11829e08",
    "metadata": {},
    "outputs": [
@@ -190,8 +189,7 @@
      "text": [
       "👍 Python is awesome! 😀\n",
       "Python is fun 🐍\n",
-      "Hello, world! :earth_americas:\n",
-      "I love coding 💻 :heart:\n"
+      "I love coding 💻 \n"
      ]
     }
    ],
@@ -199,8 +197,7 @@
     "from emoji import emojize\n",
     "print(emojize(\":thumbs_up: Python is awesome! :grinning_face:\"))\n",
     "print(emojize(\"Python is fun :snake:\"))\n",
-    "print(emojize(\"Hello, world! :earth_americas:\"))\n",
-    "print(emojize(\"I love coding :laptop: :heart:\"))"
+    "print(emojize(\"I love coding :laptop: \"))"
    ]
   }
  ],
