--- a/_notebooks/2024-09-13-process.ipynb
+++ b/_notebooks/2024-09-13-process.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2ec32729-a38d-4f90-b6a9-7b48197e6d03",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,6 @@
       "- Run the 'make' command\n",
       "  - If it doesn't work, reinstall Ruby and nbconvert\n",
       "\n",
-      "hello world\n",
       "Steps to Create the Webpage:\n",
       "- Clone the repository and open it in VS Code\n",
       "- Customize the 'About' page\n",
@@ -54,7 +53,8 @@
       " Main Difficulties:\n",
       "- Downloading the right tools, especially Jupyter and Ruby\n",
       "- Getting the 'make' command to work\n",
-      "- Changing and customizing the theme\n"
+      "- Changing and customizing the theme\n",
+      "- Creating the notebooks and getting the java cell to run properly\n"
      ]
     }
    ],
@@ -86,7 +86,6 @@
     "    print(\"- Run the 'make' command\")\n",
     "    print(\"  - If it doesn't work, reinstall Ruby and nbconvert\")\n",
     "    print()\n",
-    "    print(\"hello world\")\n",
     "\n",
     "\n",
     "def create_webpage():\n",
@@ -118,6 +117,9 @@
     "    print(\"- Getting the 'make' command to work\")\n",
     "    \n",
     "    print(\"- Changing and customizing the theme\")\n",
+    "    \n",
+    "    print(\"- Creating the notebooks and getting the java cell to run properly\" )\n",
+    "\n",
     "\n",
     "setup_tools()\n",
     "create_webpage()\n",
