--- a/_notebooks/2024-11-16-2018mcq.ipynb
+++ b/_notebooks/2024-11-16-2018mcq.ipynb
@@ -13,6 +13,7 @@
     "title: AP Classroom 2018 MCQ\n",
     "description: This is a blog reflection of the College Board MC assignment\n",
     "permalink: /2018_MCQ/\n",
+    "comments: true\n",
     "---"
    ]
   },
