extra credit blog

--- a/_notebooks/2025-01-08-extra_credit_blog.ipynb
+++ b/_notebooks/2025-01-08-extra_credit_blog.ipynb
@@ -41,11 +41,24 @@
     "- projects are something you can take with you into college\n",
     "- quality over quantity, specifically clubs\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![My Image](../images/extra_credit.jpg)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
