--- a/_notebooks/2025-01-08-extra_credit_blog.ipynb
+++ b/_notebooks/2025-01-08-extra_credit_blog.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Extra Credit blog\n",
+    "title: Student Panel - Extra Credit blog\n",
     "permalink: /extra_credit/\n",
     "---"
    ]
