--- a/_notebooks/2025-01-27-PPR.ipynb
+++ b/_notebooks/2025-01-27-PPR.ipynb
@@ -159,127 +159,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Algorithmic Code Request\n",
+    "Sequencing, Selection, and Iteration\n",
     "\n",
-    "## Code Blocks to Handle a Request\n",
-    "To handle requests, a Python API class can be created using frameworks like Flask. The class would define methods for handling `GET`, `POST`, `PUT`, and `DELETE` requests, which correspond to the standard HTTP methods used for interacting with resources.\n",
+    "The add_book_to_wishlist method demonstrates sequencing, selection, and iteration:\n",
     "\n",
-    "### Example API Class\n",
-    "```python\n",
-    "from flask import Flask, jsonify, request\n",
     "\n",
-    "app = Flask(__name__)\n",
     "\n",
-    "class API:\n",
-    "    def __init__(self):\n",
-    "        self.data = {}\n",
-    "\n",
-    "    def get(self, key):\n",
-    "        if key in self.data:\n",
-    "            return jsonify({\"key\": key, \"value\": self.data[key]}), 200\n",
-    "        return jsonify({\"error\": \"Key not found\"}), 404\n",
-    "\n",
-    "    def post(self):\n",
-    "        body = request.json\n",
-    "        key = body.get(\"key\")\n",
-    "        value = body.get(\"value\")\n",
-    "        if key and value:\n",
-    "            self.data[key] = value\n",
-    "            return jsonify({\"message\": \"Created successfully\", \"data\": {key: value}}), 201\n",
-    "        return jsonify({\"error\": \"Invalid input\"}), 400\n",
-    "\n",
-    "    def put(self, key):\n",
-    "        if key in self.data:\n",
-    "            body = request.json\n",
-    "            value = body.get(\"value\")\n",
-    "            if value:\n",
-    "                self.data[key] = value\n",
-    "                return jsonify({\"message\": \"Updated successfully\", \"data\": {key: value}}), 200\n",
-    "            return jsonify({\"error\": \"Invalid input\"}), 400\n",
-    "        return jsonify({\"error\": \"Key not found\"}), 404\n",
-    "\n",
-    "    def delete(self, key):\n",
-    "        if key in self.data:\n",
-    "            del self.data[key]\n",
-    "            return jsonify({\"message\": \"Deleted successfully\"}), 200\n",
-    "        return jsonify({\"error\": \"Key not found\"}), 404\n",
-    "\n",
-    "api_instance = API()\n",
-    "\n",
-    "@app.route('/data/<key>', methods=['GET'])\n",
-    "def get_data(key):\n",
-    "    return api_instance.get(key)\n",
-    "\n",
-    "@app.route('/data', methods=['POST'])\n",
-    "def create_data():\n",
-    "    return api_instance.post()\n",
-    "\n",
-    "@app.route('/data/<key>', methods=['PUT'])\n",
-    "def update_data(key):\n",
-    "    return api_instance.put(key)\n",
-    "\n",
-    "@app.route('/data/<key>', methods=['DELETE'])\n",
-    "def delete_data(key):\n",
-    "    return api_instance.delete(key)\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    app.run(debug=True)\n",
-    "```\n",
-    "\n",
-    "## Method Containing Sequencing, Selection, and Iteration\n",
-    "The `post` method demonstrates sequencing, selection, and iteration as follows:\n",
-    "- **Sequencing**: The method executes statements in order, such as extracting JSON data, validating input, and updating the dataset.\n",
-    "- **Selection**: Conditional checks (e.g., `if key and value`) ensure that only valid input is processed.\n",
-    "- **Iteration**: While the method itself does not directly iterate, similar logic could iterate over keys in a batch operation.\n",
-    "\n",
-    "### Parameters and Return Type\n",
-    "- **Parameters**: The `post` method extracts data from the `request.json` object, which includes a `key` and `value`.\n",
-    "- **Return Type**: Responses are returned using `jsonify`, which ensures a JSON format response.\n",
-    "\n",
-    "## Call to Algorithm Request\n",
-    "\n",
-    "### Definition of Code Block to Make a Request\n",
-    "A request to the API can be made using tools like Postman or programmatically using Python's `requests` library.\n",
-    "\n",
-    "```python\n",
-    "import requests\n",
-    "\n",
-    "# Example POST request\n",
-    "response = requests.post('http://localhost:5000/data', json={\"key\": \"example\", \"value\": \"value1\"})\n",
-    "print(response.json())\n",
-    "\n",
-    "# Example GET request\n",
-    "response = requests.get('http://localhost:5000/data/example')\n",
-    "print(response.json())\n",
-    "```\n",
-    "\n",
-    "## Call/Request to the Method\n",
-    "When calling the `post` endpoint:\n",
-    "1. The client sends JSON data to the server.\n",
-    "2. The server processes the input, updates the `data` dictionary, and returns a success message or error response.\n",
-    "\n",
-    "### Handling Responses\n",
-    "Responses from the API are handled using JSON parsing, allowing client applications to render or act on returned data.\n",
-    "\n",
-    "## Changing Data or Method to Trigger Responses\n",
-    "### Normal Conditions\n",
-    "- **POST**: Sending valid key-value pairs updates the dataset and returns a 201 status.\n",
-    "- **GET**: Requesting an existing key retrieves the value with a 200 status.\n",
-    "\n",
-    "### Error Conditions\n",
-    "- **POST**: Omitting a `key` or `value` returns a 400 error.\n",
-    "- **GET**: Requesting a non-existent key returns a 404 error.\n",
-    "\n",
-    "### Example Response Handling\n",
-    "```python\n",
-    "response = requests.get('http://localhost:5000/data/nonexistent')\n",
-    "if response.status_code == 404:\n",
-    "    print(\"Key not found\")\n",
-    "else:\n",
-    "    print(response.json())\n",
-    "```\n",
-    "By adjusting the input or endpoint, different conditions can be tested to ensure robust error handling and consistent functionality.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Route to add a book to the wishlist\n",
+    "@wishlist_api.route('/', methods=['POST'])\n",
+    "def add_book_to_wishlist():\n",
+    "    \"\"\"Add a book to the wishlist.\"\"\"\n",
+    "    if request.is_json:\n",
+    "        data = request.get_json()\n",
+    "        book_id = data.get('book_id')\n",
+    "\n",
+    "        # Validate that book_id is provided\n",
+    "        if not book_id:\n",
+    "            return jsonify({\"error\": \"Missing book_id\"}), 400\n",
+    "\n",
+    "        # Check if the book exists in the books database\n",
+    "        book = Book.query.get(book_id)\n",
+    "        if not book:\n",
+    "            return jsonify({\"error\": \"Book not found\"}), 404\n",
+    "\n",
+    "        # Check if the book is already in the wishlist\n",
+    "        existing_entry = Wishlist.query.filter_by(book_id=book_id).first()\n",
+    "        if existing_entry:\n",
+    "            return jsonify({\"message\": \"Book already in wishlist\"}), 200\n",
+    "\n",
+    "        # Add the book to the wishlist\n",
+    "        new_entry = Wishlist(book_id=book_id)\n",
+    "        db.session.add(new_entry)\n",
+    "        db.session.commit()\n",
+    "\n",
+    "        return jsonify({\"message\": \"Book added to wishlist\"}), 201\n",
+    "\n",
+    "    return jsonify({\"error\": \"Request must be JSON\"}), 415\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sequencing: Sequentially processes the request, validates the input, checks database records, and adds a new entry.\n",
+    "\n",
+    "Selection: Uses if conditions to handle cases like missing book_id, non-existent books, or duplicate entries.\n",
+    "\n",
+    "Iteration: Iterates through existing records using a loop to build the wishlist response."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters and Return Types\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "The POST request body must be JSON and include `book_id`.\n",
+    "\n",
+    "Example body:\n",
+    "\n",
+    "{\n",
+    "  \"book_id\": 1\n",
+    "}\n",
+    "\n",
+    "Return Type: JSON responses are created using `jsonify`, returning:\n",
+    "\n",
+    "Success messages (`201` or `200` status).\n",
+    "\n",
+    "Error messages (`400`, `404`, or `415` status).\n",
+    "\n",
+    "## Making a Request\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Adding a book to the wishlist\n",
+    "fetch('/api/wishlist/', {\n",
+    "    method: 'POST',\n",
+    "    headers: {\n",
+    "        'Content-Type': 'application/json'\n",
+    "    },\n",
+    "    body: JSON.stringify({ book_id: 1 })\n",
+    "})\n",
+    ".then(response => response.json())\n",
+    ".then(data => console.log(data));"
    ]
   }
  ],
