adding postman testing

--- a/_notebooks/2025-01-27-PPR.ipynb
+++ b/_notebooks/2025-01-27-PPR.ipynb
@@ -259,6 +259,57 @@
     ".then(response => response.json())\n",
     ".then(data => console.log(data));"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing API's on postman\n",
+    "\n",
+    "Fetching all the books:\n",
+    " {\n",
+    "        \"author\": \"Charles Dickens\",\n",
+    "        \"id\": 1,\n",
+    "        \"title\": \"Great Expectations\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"author\": \"S.E. Hinton\",\n",
+    "        \"id\": 2,\n",
+    "        \"title\": \"The Outsiders\"\n",
+    "    },\n",
+    "...\n",
+    "\n",
+    "Fetching the wishlist:\n",
+    " {\n",
+    "        \"author\": \"Jane Austen\",\n",
+    "        \"id\": 4,\n",
+    "        \"title\": \"Pride and Prejudice\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"author\": \"Traci Chee\",\n",
+    "        \"id\": 16,\n",
+    "        \"title\": \"We are Not Free\"\n",
+    "    },\n",
+    "...\n",
+    "\n",
+    "Adding a book to wishlist:\n",
+    "{\n",
+    "    \"message\": \"Book added to wishlist\"\n",
+    "}\n",
+    "or\n",
+    "{\n",
+    "    \"message\": \"Book already in wishlist\"\n",
+    "}\n",
+    "\n",
+    "Deleting book from wishlist:\n",
+    "{\n",
+    "    \"message\": \"Book removed from wishlist\"\n",
+    "}\n",
+    "or\n",
+    "{\n",
+    "    \"error\": \"Book not found in wishlist\"\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
