--- a/_notebooks/2025-01-27-PPR.ipynb
+++ b/_notebooks/2025-01-27-PPR.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "## Purpose of our Program: \n",
-    "The purpose of our program is for readers to get reccomendations, provide reviews, and find new books to read.\n",
+    "The purpose of our program is to connect readers so they can get recommendations, provide reviews, and find new books to read.\n",
     "\n",
     "### Purpose of my feature:\n",
     "The purpose of my feature, the wishlist, is for readers to be able to keep track of the books that they want to read in the future."
