adding api's to ppr

--- a/_notebooks/2025-01-27-PPR.ipynb
+++ b/_notebooks/2025-01-27-PPR.ipynb
@@ -22,8 +22,185 @@
     "## Purpose of our Program: \n",
     "The purpose of our program is to connect readers so they can get recommendations, provide reviews, and find new books to read.\n",
     "\n",
-    "### Purpose of my feature:\n",
+    "## Purpose of my feature:\n",
     "The purpose of my feature, the wishlist, is for readers to be able to keep track of the books that they want to read in the future."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## API Methods:\n",
+    "\n",
+    "### 1. GET Method: Fetching Data\n",
+    "The API provides two `GET` routes:\n",
+    "\n",
+    "#### Fetching All Books\n",
+    "```python\n",
+    "@wishlist_api.route('/books', methods=['GET'])\n",
+    "def get_books():\n",
+    "    \"\"\"Retrieve all books from the database to display in a dropdown menu.\"\"\"\n",
+    "    books = Book.query.all()\n",
+    "    books_list = [{'id': book.id, 'title': book.title, 'author': book.author} for book in books]\n",
+    "    return jsonify(books_list)\n",
+    "```\n",
+    "This function retrieves all books from the database and returns a JSON list of book objects.\n",
+    "\n",
+    "#### Fetching Books in Wishlist\n",
+    "```python\n",
+    "@wishlist_api.route('/', methods=['GET'])\n",
+    "def get_wishlist():\n",
+    "    \"\"\"Retrieve all books in the wishlist.\"\"\"\n",
+    "    wishlist_items = Wishlist.query.all()\n",
+    "    books_in_wishlist = []\n",
+    "    for item in wishlist_items:\n",
+    "        book = Book.query.get(item.book_id)\n",
+    "        if book:\n",
+    "            books_in_wishlist.append({'id': book.id, 'title': book.title, 'author': book.author})\n",
+    "    return jsonify(books_in_wishlist)\n",
+    "```\n",
+    "This function retrieves books currently in the wishlist by cross-referencing the `Wishlist` model with the `Book` model.\n",
+    "\n",
+    "### 2. POST Method: Adding Data\n",
+    "```python\n",
+    "@wishlist_api.route('/', methods=['POST'])\n",
+    "def add_book_to_wishlist():\n",
+    "    \"\"\"Add a book to the wishlist.\"\"\"\n",
+    "    if request.is_json:\n",
+    "        data = request.get_json()\n",
+    "        book_id = data.get('book_id')\n",
+    "\n",
+    "        if not book_id:\n",
+    "            return jsonify({\"error\": \"Missing book_id\"}), 400\n",
+    "\n",
+    "        book = Book.query.get(book_id)\n",
+    "        if not book:\n",
+    "            return jsonify({\"error\": \"Book not found\"}), 404\n",
+    "\n",
+    "        existing_entry = Wishlist.query.filter_by(book_id=book_id).first()\n",
+    "        if existing_entry:\n",
+    "            return jsonify({\"message\": \"Book already in wishlist\"}), 200\n",
+    "\n",
+    "        new_entry = Wishlist(book_id=book_id)\n",
+    "        db.session.add(new_entry)\n",
+    "        db.session.commit()\n",
+    "\n",
+    "        return jsonify({\"message\": \"Book added to wishlist\"}), 201\n",
+    "\n",
+    "    return jsonify({\"error\": \"Request must be JSON\"}), 415\n",
+    "```\n",
+    "This function:\n",
+    "- Extracts `book_id` from the JSON request body.\n",
+    "- Validates if the book exists in the database.\n",
+    "- Checks if the book is already in the wishlist.\n",
+    "- Adds the book to the wishlist and commits the transaction.\n",
+    "- Returns appropriate responses for missing or invalid data.\n",
+    "\n",
+    "### 3. DELETE Method: Removing Data\n",
+    "```python\n",
+    "@wishlist_api.route('/<int:book_id>', methods=['DELETE'])\n",
+    "def delete_book_from_wishlist(book_id):\n",
+    "    \"\"\"Delete a book from the wishlist.\"\"\"\n",
+    "    wishlist_item = Wishlist.query.filter_by(book_id=book_id).first()\n",
+    "\n",
+    "    if not wishlist_item:\n",
+    "        return jsonify({\"error\": \"Book not found in wishlist\"}), 404\n",
+    "\n",
+    "    try:\n",
+    "        db.session.delete(wishlist_item)\n",
+    "        db.session.commit()\n",
+    "        return jsonify({\"message\": \"Book removed from wishlist\"}), 200\n",
+    "    except Exception as e:\n",
+    "        db.session.rollback()\n",
+    "        return jsonify({\"error\": f\"An error occurred: {str(e)}\"}), 500\n",
+    "```\n",
+    "This function:\n",
+    "- Checks if the book exists in the wishlist.\n",
+    "- Deletes the book entry from the wishlist.\n",
+    "- Handles database commit errors properly.\n",
+    "\n",
+    "## Handling Requests with Algorithms\n",
+    "The API demonstrates three fundamental control structures:\n",
+    "\n",
+    "### 1. **Sequencing**\n",
+    "Each function follows a structured sequence:\n",
+    "1. Receive the request.\n",
+    "2. Validate the input.\n",
+    "3. Query the database.\n",
+    "4. Process and return the response.\n",
+    "\n",
+    "### 2. **Selection (Conditional Statements)**\n",
+    "Conditional logic is used in:\n",
+    "- `POST` request: Checking if `book_id` is missing, if the book exists, and if it's already in the wishlist.\n",
+    "- `DELETE` request: Ensuring the book is in the wishlist before attempting deletion.\n",
+    "\n",
+    "### 3. **Iteration (Looping)**\n",
+    "Iteration is applied in the `GET` wishlist method:\n",
+    "```python\n",
+    "for item in wishlist_items:\n",
+    "    book = Book.query.get(item.book_id)\n",
+    "    if book:\n",
+    "        books_in_wishlist.append({'id': book.id, 'title': book.title, 'author': book.author})\n",
+    "```\n",
+    "This loop retrieves book details for each wishlist item.\n",
+    "\n",
+    "## API Call Example\n",
+    "### Making a Request Using `fetch`\n",
+    "```javascript\n",
+    "fetch('/api/wishlist/', {\n",
+    "    method: 'POST',\n",
+    "    headers: {\n",
+    "        'Content-Type': 'application/json'\n",
+    "    },\n",
+    "    body: JSON.stringify({ book_id: 1 })\n",
+    "})\n",
+    ".then(response => response.json())\n",
+    ".then(data => console.log(data));\n",
+    "```\n",
+    "### Handling the Response\n",
+    "```javascript\n",
+    "fetch('/api/wishlist/')\n",
+    "    .then(response => response.json())\n",
+    "    .then(data => console.log(data))\n",
+    "    .catch(error => console.error('Error:', error));\n",
+    "```\n",
+    "\n",
+    "## Error Handling and Response Variations\n",
+    "| Condition | Response |\n",
+    "|-----------|----------|\n",
+    "| `book_id` is missing | `{ \"error\": \"Missing book_id\" }` (400) |\n",
+    "| Book does not exist | `{ \"error\": \"Book not found\" }` (404) |\n",
+    "| Book already in wishlist | `{ \"message\": \"Book already in wishlist\" }` (200) |\n",
+    "| Successfully added | `{ \"message\": \"Book added to wishlist\" }` (201) |\n",
+    "| Successfully deleted | `{ \"message\": \"Book removed from wishlist\" }` (200) |\n",
+    "| Book not in wishlist | `{ \"error\": \"Book not found in wishlist\" }` (404) |\n",
+    "\n",
+    "This document comprehensively details the API's logic, request handling, and error responses.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing API's on Postman\n",
+    "\n",
+    "Return List of Books:\n",
+    "![img](../images/get_books.png)\n",
+    "\n",
+    "Return Wishlist\n",
+    "![img](../images/get_wishlist.png)\n",
+    "\n",
+    "Add a Book to the Wishlist\n",
+    "![img](../images/add_wishlist.png)\n",
+    "\n",
+    "Delete a Book From the Wishlist\n",
+    "![img](../images/delete_wishlist.png)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -159,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sequencing, Selection, and Iteration\n",
+    "## Sequencing, Selection, and Iteration\n",
     "\n",
     "The add_book_to_wishlist method demonstrates sequencing, selection, and iteration:\n",
     "\n",
@@ -258,57 +435,6 @@
     "})\n",
     ".then(response => response.json())\n",
     ".then(data => console.log(data));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Testing API's on postman\n",
-    "\n",
-    "Fetching all the books:\n",
-    " {\n",
-    "        \"author\": \"Charles Dickens\",\n",
-    "        \"id\": 1,\n",
-    "        \"title\": \"Great Expectations\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"author\": \"S.E. Hinton\",\n",
-    "        \"id\": 2,\n",
-    "        \"title\": \"The Outsiders\"\n",
-    "    },\n",
-    "...\n",
-    "\n",
-    "Fetching the wishlist:\n",
-    " {\n",
-    "        \"author\": \"Jane Austen\",\n",
-    "        \"id\": 4,\n",
-    "        \"title\": \"Pride and Prejudice\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"author\": \"Traci Chee\",\n",
-    "        \"id\": 16,\n",
-    "        \"title\": \"We are Not Free\"\n",
-    "    },\n",
-    "...\n",
-    "\n",
-    "Adding a book to wishlist:\n",
-    "{\n",
-    "    \"message\": \"Book added to wishlist\"\n",
-    "}\n",
-    "or\n",
-    "{\n",
-    "    \"message\": \"Book already in wishlist\"\n",
-    "}\n",
-    "\n",
-    "Deleting book from wishlist:\n",
-    "{\n",
-    "    \"message\": \"Book removed from wishlist\"\n",
-    "}\n",
-    "or\n",
-    "{\n",
-    "    \"error\": \"Book not found in wishlist\"\n",
-    "}"
    ]
   }
  ],
