--- a/_notebooks/2025-03-17-ComputingBias.ipynb
+++ b/_notebooks/2025-03-17-ComputingBias.ipynb
@@ -352,7 +352,21 @@
     "\n",
     "**Explain the difference between implicit and explicit data. Provide an example of each.**  \n",
     "\n",
-    "---\n"
+    "---\n",
+    "\n",
+    "| Criteria                         | Description                                                                                       | Points |\n",
+    "|---------------------------------|---------------------------------------------------------------------------------------------------|--------|\n",
+    "| **Multiple-Choice Questions (0.5 points total)** | Each correct answer is worth 0.1 points.                                                        | 0.5    |\n",
+    "| - Question 1                     | Correct answer: **B**                                                                            | 0.1    |\n",
+    "| - Question 2                     | Correct answer: **D**                                                                            | 0.1    |\n",
+    "| - Question 3                     | Correct answer: **C**                                                                            | 0.1    |\n",
+    "| - Question 4                     | Correct answer: **A**                                                                            | 0.1    |\n",
+    "| - Question 5                     | Correct answer: **C**                                                                            | 0.1    |\n",
+    "| **Short-Answer Question (0.5 points)**  | Explanation of implicit vs. explicit data, with accurate examples of each.                   | 0.5    |\n",
+    "| - Clarity & Accuracy             | Clear, concise, and correct explanation of implicit vs. explicit data.                         | 0.25   |\n",
+    "| - Examples Provided              | Provides appropriate examples for both implicit and explicit data.                             | 0.25   |\n",
+    "| **Total**                        |                                                                                                   | 1.0    |\n",
+    "\n"
    ]
   }
  ],
