fixing simulation hw

--- a/_notebooks/2025-04-11-random.ipynb
+++ b/_notebooks/2025-04-11-random.ipynb
@@ -11,7 +11,7 @@
    },
    "source": [
     "---\n",
-    "layout: page\n",
+    "layout: post\n",
     "title: Random Simulation\n",
     "permalink: /random/\n",
     "---"
