--- a/_notebooks/2025-04-11-random.ipynb
+++ b/_notebooks/2025-04-11-random.ipynb
@@ -13,7 +13,7 @@
     "---\n",
     "layout: post\n",
     "title: Random Simulation\n",
-    "permalink: /random/\n",
+    "permalink: /randoms/\n",
     "---"
    ]
   },
